--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,7 @@ jobs:
       - name: Deploy API
         uses: Azure/k8s-deploy@v1.3
         with:
+          images: caulinalmeida/api-produto:${{ github.run_number }}
           manifests: |
             k8s/api/deployment.yaml
             k8s/api/service.yaml
