--- a/k8s/api/deployment.yaml
+++ b/k8s/api/deployment.yaml
@@ -6,9 +6,9 @@ spec:
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxSurge: "25%"
-      maxUnavailable: "25%"
-  replicas: 3
+      maxSurge: 1
+      maxUnavailable: 0
+  replicas: 5
   selector:
     matchLabels:
       app: api
